# cl-metrics

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
cl_metrics/: __init__.py  metrics.py  snn_metrics.py  validator.py
docs/: faq.html
examples/: quick_start.py
paper/: paper.bib  paper.md
tests/: test_metrics.py
