[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cl-metrics"
version = "0.1.0"
authors = [{ name = "Venkatesh Swaminathan", email = "venkateshswaminathaniyer@gmail.com" }]
description = "Stateless CIL/CL evaluation metrics library with SNN energy-aware extensions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy>=1.21.0"]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/venky2099/cl-metrics"
